# RetinaFace

./: LICENSE  README.md  test.py
configs/: retinaface_res18.py  retinanet.py  retinanet_mnasnet.py
models/: __init__.py  retinanet.py
models/backbones/: __init__.py  fpn.py  mnasnet.py  resnet.py  utils.py
tvm/: CMakeLists.txt  main.cpp
tvm/data/: retinaface_small.json  retinaface_small.params
tvm/include/detection/: anchor_generator.hpp  detector.hpp
tvm/include/engine/: syncedmem.h  tensor.h
tvm/include/misc/: time.hpp
tvm/src/detection/: anchor_generator.cpp  detector.cpp
tvm/src/engine/: syncedmem.cpp  tensor.cpp
tvm/src/misc/: time.cpp
utils/anchor/: prior_box.py
utils/bbox/: box_utils.py
utils/eval/: voc_eval.py
utils/misc/: __init__.py  flops_benchmark.py  vis_cnn.py
utils/ops/: __init__.py
utils/ops/masked_conv/: compile.sh
utils/ops/masked_conv/functions/: masked_conv.py
